// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`duplicate vote 1`] = `
Object {
  "data": Object {
    "vote": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Already voted for link: 1",
      "path": Array [
        "vote",
      ],
    },
  ],
}
`;

exports[`new vote 1`] = `
Object {
  "data": Object {
    "vote": Object {
      "id": 1,
      "link": Object {
        "description": "Nem nokibof bar jilhe puwa.",
        "id": 1,
        "url": "http://gobhaptem.mq/ki",
      },
      "user": Object {
        "email": "juhiza@sapeag.zw",
        "id": 1,
        "name": "Dollie",
      },
    },
  },
}
`;

exports[`not authenticated 1`] = `
Object {
  "data": Object {
    "vote": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Not authenticated",
      "path": Array [
        "vote",
      ],
    },
  ],
}
`;
